[gd_scene load_steps=4 format=3 uid="uid://dp651gwb4n27v"]

[ext_resource type="Script" path="res://tweet.gd" id="1_vthcq"]

[sub_resource type="Gradient" id="Gradient_5cp40"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.324898, 0.354496, 0.489293, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gwsb5"]
gradient = SubResource("Gradient_5cp40")
height = 200

[node name="Tweet" type="TextureRect"]
texture = SubResource("GradientTexture2D_gwsb5")
script = ExtResource("1_vthcq")

[node name="User" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
text = "User:"

[node name="Post" type="Label" parent="."]
layout_mode = 0
offset_top = 56.0
offset_right = 100.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 40
text = "Post:"

[node name="Date" type="Label" parent="."]
layout_mode = 0
offset_left = 872.0
offset_right = 972.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "Date:"

[node name="DeletePost" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 624.0
offset_top = 8.0
offset_right = 763.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 25
text = "DeletePost"

[node name="post_id" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ReadComment" type="Button" parent="."]
offset_left = 400.0
offset_top = 8.0
offset_right = 603.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 25
text = "Read comments"

[node name="Likes" type="Label" parent="."]
offset_top = 120.0
offset_right = 120.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 40
text = "Likes: "

[node name="AddLike" type="Button" parent="."]
offset_left = 400.0
offset_top = 136.0
offset_right = 619.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 25
text = "Add/Remove Like"

[node name="likesecret" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="DeletePost" to="." method="_on_delete_post_pressed"]
[connection signal="pressed" from="ReadComment" to="." method="_on_delete_post_2_pressed"]
[connection signal="pressed" from="AddLike" to="." method="_on_add_like_pressed"]
